[gd_scene load_steps=2 format=3 uid="uid://jc0rwis1gjgx"]

[ext_resource type="Script" path="res://Scenes/Overlays/TurnView/TurnView.gd" id="1_rd0do"]

[node name="TurnView" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rd0do")

[node name="Button" type="Button" parent="."]
offset_right = 150.0
offset_bottom = 31.0
text = "End turn"

[node name="NextPhaseButton" type="Button" parent="."]
offset_right = 150.0
offset_bottom = 31.0
text = "next Game Phase?"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="NextPhaseButton" to="." method="_on_next_phase_button_pressed"]
